import { Image } from "./image";

export type Pictogram = {
  id: string;
  name: string;
  image: Image;
};
