import { Repository } from "./repository";
import { Pictogram } from "../models";

export type PictogramRepository = Repository<Pictogram>;
